<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_item_weather_city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/item_weather_text_city" />

    <TextView
        android:id="@+id/text_item_weather_current_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/item_weather_text_current_weather" />

    <TextView
        android:id="@+id/text_item_weather_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/item_weather_text_description" />

    <TextView
        android:id="@+id/text_item_weather_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/item_weather_text_temperature" />

    <TextView
        android:id="@+id/text_item_weather_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/item_weather_text_humidity" />

</LinearLayout>